--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>Christopher Morse</title>
 </head>
 
 <body>
-<p>Hello World~!~!!~!~!~!!!</p>
+<p>Project 1 Test</p>
 </body>
 </html>
